# utote

./: .gitignore  Cargo.toml  README.md  check.sh  test.py
benches/: bench.rs  benches.rs
src/: array.rs  chunks.rs  common.rs  counter.rs  elem_array.rs  iter.rs  lib.rs  main.rs  multiset.rs  multiset2.rs  multiset_array.rs  multiset_simd.rs  polyfill.rs  scalar_array.rs  serde.rs  simd.rs  simd_array.rs  simd_impl.rs  simd_iter.rs  small_num.rs  small_zero.rs  tests.rs
src/scalar/: mod.rs  scalar_array.rs
src/simd/: mod.rs  simd_array.rs  simd_native.rs  small_num_impl.rs
