[package]
name = "utote"
version = "0.5.0"
authors = ["Marcus Desai <marcus.desai@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Maracoo/utote"
homepage = "https://github.com/Maracoo/utote"
description = "Stack allocated uint multiset, with optional SIMD implementations."
keywords = ["multiset", "data-structure", "collection", "simd", "stack"]
categories = ["data-structures"]
readme = "README.md"
documentation = "https://docs.rs/utote"

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2", optional = true }
rand = { version = "0.8.3", features = ["small_rng"], optional = true }
num-traits = "0.2.14"
paste = "1.0.5"

[dev-dependencies]
approx = "0.4.0"
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false

[package.metadata.docs.rs]
all-features = true
