[package]
name = "utote"
version = "0.6.0"
authors = ["Marcus Desai <marcus.desai@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Maracoo/utote"
homepage = "https://github.com/Maracoo/utote"
description = "Stack allocated uint multiset, with optional SIMD implementations."
keywords = ["multiset", "data-structure", "collection", "simd", "stack"]
categories = ["data-structures"]
readme = "README.md"
documentation = "https://docs.rs/utote"

[dependencies]
#packed_simd = { version = "0.3.4", package = "packed_simd_2", optional = true }
rand = { version = "0.8.3", optional = true }
num-traits = "0.2.14"
paste = "1.0.5"

[dev-dependencies]
approx = "0.4.0"
criterion = "0.3"
rand = "0.8.3"

[features]
#simd = ["packed_simd"]

[package.metadata.docs.rs]
features = ["rand"]

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false
