[package]
name = "utote"
version = "0.7.0"
authors = ["Marcus Desai <marcus.desai@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marcusdesai/utote"
homepage = "https://github.com/marcusdesai/utote"
description = "Stack allocated uint multiset, with optional SIMD implementations."
keywords = ["multiset", "data-structure", "collection", "simd", "stack"]
categories = ["data-structures"]
readme = "README.md"
documentation = "https://docs.rs/utote"

[dependencies]
rand = { version = "0.8.5", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
approx = "0.4.0"
criterion = "0.3"
rand = "0.8.5"
serde_json = "1.0"

[features]
simd = []

[package.metadata.docs.rs]
features = ["rand"]

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false
